[package]
name = "marked-cycles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-rational = ">=0.4.1"
num-bigint = "*"
plotters = "*"
num = "*"
clap = { version = ">=4.0.32", features = ["derive"] }
