[package]
name = "marked-cycles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-rational = ">=0.4.1"
num-bigint = "*"
plotters = "*"
num = "*"
clap = { version = ">=4.4.4", features = ["derive"] }
derive_more = "0.99.17"
itertools = "0.11.0"
