[package]
name = "marked-cycles"
version = "0.3.0"
edition = "2021"
authors = ["Danny Stoll <dastoll@umich.edu>"]
repository = "https://github.com/dannystoll1/marked-cycles"

[dependencies]
num-rational = ">=0.4.1"
num-bigint = "*"
plotters = "*"
num = "*"
clap = { version = ">=4.4.4", features = ["derive"] }
derive_more = "0.99.17"
itertools = "0.11.0"
